--- a/templates/index.html
+++ b/templates/index.html
@@ -17,7 +17,7 @@
                 {% for task in tasks %}
                 <li>
                     <a href="{{ url_for('delete', id=task.id) }}"><i class="fa-solid fa-circle-minus "></i></a>
-                    <p style="display:inline">{{task.title}}</p>
+                    <a href="{{ url_for('detail', id=task.id) }}" style="color: black"><p style="display:inline">{{task.title}}</p></a>
                     <a href=" "><i class="fa-solid fa-pen-to-square "></i></a>
                 </li>
                 {% endfor %}
