--- a/templates/detail.html
+++ b/templates/detail.html
@@ -1,21 +1,7 @@
-<!DOCTYPE html>
-<html lang="en">
+{% extends "base.html" %}
+{% block content %}
 
-<head>
-    <meta charset="UTF-8">
-    <title>Add Book</title>
-    <!-- bootstrap and fontawesome -->
-    <link rel="stylesheet"
-          href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
-    <script src="https://kit.fontawesome.com/efdaec7388.js"
-            crossorigin="anonymous"></script>
-</head>
 
-<body>
-
-<div class="container h-100 d-flex justify-content-center">
-    <h1 class="display-3"></h1>
-    <div class="jumbotron my-auto ">
         <h2>{{task.title}}</h2><br>
         <h4>Description: </h4>
         <h5>{{task.description}}</h5>
@@ -27,6 +13,4 @@
     </div>
 
 </div>
-</body>
-
-</html>
+{% endblock %}
