--- a/templates/index.html
+++ b/templates/index.html
@@ -1,32 +1,75 @@
-<!DOCTYPE html>
-<html lang="en">
+{% extends "base.html" %}
+{% block content %}
 
-<head>
-    <meta charset="UTF-8">
-    <title>My tasks</title>
-    <!-- bootstrap and fontawesome -->
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
-    <script src="https://kit.fontawesome.com/efdaec7388.js" crossorigin="anonymous"></script>
-</head>
 
-<body>
-    <div class="container h-100 d-flex justify-content-center">
-        <h1 class="display-3">My tasks</h1>
-        <div class="jumbotron my-auto">
-            <ul>
-                {% for task in tasks %}
-                <li>
-                    <a href="{{ url_for('delete', id=task.id) }}"><i class="fa-solid fa-circle-minus "></i></a>
-                    <a href="{{ url_for('detail', id=task.id) }}" style="color: black"><p style="display:inline">{{task.title}}</p></a>
-                    <a href=" "><i class="fa-solid fa-pen-to-square "></i></a>
-                </li>
-                {% endfor %}
-                <li>
-                    <a href="add"><i class="fa-solid fa-plus "></i></a>
-                </li>
-            </ul>
+<form method="POST">
+    <div class="input-group col-xs-4">
+        <input type="text" class="form-control" placeholder="Search" name="filter">
+        <div class="input-group-btn">
+            <a href="{{ url_for('home')}}">
+            <button class="btn btn-default" type="submit">
+                <i class="glyphicon glyphicon-search"></i>
+            </button>
+            </a>
         </div>
     </div>
-</body>
+</form>
+<!--table of tasks-->
+<table class="table">
+    <thead>
+    <tr>
+        <!--                <th scope="col">#</th>-->
+        <th scope="col">Task name</th>
+        <th scope="col">Status</th>
+        <th scope="col">Delete</th>
+        <th scope="col">Edit</th>
+        <th scope="col">Deadline</th>
+    </tr>
+    </thead>
+    <tbody>
+    <!--            for one row-->
+    {% for task in tasks %}
+    <tr>
+        <!--                <th scope="row">-->
+        <!--                    <p style="display:inline">-->
+        <!--                        {{task.id}}</p>-->
+        <!--                </th>-->
+        <td>
+            <a href="{{ url_for('detail', id=task.id) }}" style="color: black">
+                {{task.title}}</a>
+        </td>
 
-</html>
+        <td>
+            <!--                    <button>{{task.status}}</button>-->
+            <a href="{{ url_for('status', id=task.id) }}">
+                <button class="">{{task.status}}</button>
+            </a>
+            <!--                    status-->
+        </td>
+        <td>
+            <a href="{{ url_for('delete', id=task.id) }}"><i class="fa-solid fa-circle-minus "></i></a>
+        </td>
+        <td>
+            <a href="{{ url_for('edit', id=task.id) }}"><i class="fa-solid fa-pen-to-square "></i></a>
+        </td>
+        <td>
+            {{task.deadline}}
+        </td>
+
+    </tr>
+    {% endfor %}
+    <!--end of row-->
+    <tr>
+        <th>
+        </th>
+        <td>
+            <a href="add"><i class="fa-solid fa-plus "></i></a>
+        </td>
+    </tr>
+    </tbody>
+</table>
+
+
+</div>
+
+{% endblock %}
