--- a/templates/add.html
+++ b/templates/add.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %}
 {% block content %}
-<h3 >Add a new task</h3>
+<h3>Add a new task</h3>
 <div class="">
     <form action="" method="POST">
         <div class="row">
@@ -13,6 +13,12 @@
             <div class="col-sm-4"><label for="start">Deadline for task</label><br>
                 <input type="date" id="start" name="deadline"
                 ></div>
+            <!--            <div>-->
+            <!--&lt;!&ndash;                <h3>File Upload</h3>&ndash;&gt;-->
+            <!--                <form method="POST" action="" enctype="multipart/form-data">-->
+            <!--                    <input type="file" name="file">-->
+            <!--                </form>-->
+            <!--            </div>-->
 
         </div>
         <!--            &lt;!&ndash;            task name&ndash;&gt;-->
