--- a/templates/index.html
+++ b/templates/index.html
@@ -1,19 +1,59 @@
 {% extends "base.html" %}
 {% block content %}
 
+<div class="row">
+    <div class="col-sm-8">
+        <form action="" method="POST">
+            <div class="input-group col-xs-5">
+                <input type="text" class="form-control" placeholder="Search" name="search">
+                <div class="input-group-btn">
+                    <!--            <a href="{{ url_for('home')}}">-->
+                    <button class="btn btn-default" type="submit">
+                        <i class="glyphicon glyphicon-search"></i>
+                    </button>
+                    <!--            </a>-->
+                </div>
 
-<form method="POST">
-    <div class="input-group col-xs-4">
-        <input type="text" class="form-control" placeholder="Search" name="filter">
-        <div class="input-group-btn">
-            <a href="{{ url_for('home')}}">
-            <button class="btn btn-default" type="submit">
-                <i class="glyphicon glyphicon-search"></i>
-            </button>
-            </a>
-        </div>
+            </div>
+        </form>
     </div>
-</form>
+    <div class="col-sm-2">
+        <form action="/show_finished" method="POST">
+            <button class="btn btn-default" type="submit">
+                Show finished tasks
+            </button>
+        </form>
+    </div>
+    <div class="col-sm-1">
+<!--        <form action="" method="">-->
+        <a href="{{ url_for('home')}}">
+            <button class="btn btn-default" type="submit">
+                Show all tasks
+            </button></a>
+<!--        </form></div>-->
+</div>
+
+
+<!--<form action="" method="POST">-->
+<!--    <div class="input-group col-xs-5">-->
+<!--        <input type="text" class="form-control" placeholder="Search" name="search">-->
+<!--        <div class="input-group-btn">-->
+<!--            &lt;!&ndash;            <a href="{{ url_for('home')}}">&ndash;&gt;-->
+<!--            <button class="btn btn-default" type="submit">-->
+<!--                <i class="glyphicon glyphicon-search"></i>-->
+<!--            </button>-->
+<!--            &lt;!&ndash;            </a>&ndash;&gt;-->
+<!--        </div>-->
+
+<!--    </div>-->
+<!--</form>-->
+<!--<form action="/show_finished" method="POST">-->
+<!--    <button class="btn btn-default" type="submit">-->
+<!--        Show finished tasks-->
+<!--    </button>-->
+<!--</form>-->
+
+
 <!--table of tasks-->
 <table class="table">
     <thead>
