--- a/static/styles.css
+++ b/static/styles.css
@@ -1,3 +1,11 @@
-.✓ {
-    background-color: green;
+.my-bg {
+    background: #ff9a9e;
+    /* Chrome 10-25, Safari 5.1-6 */
+    background: -webkit-linear-gradient(to right, rgba(255, 154, 158, 0.5), rgba(250, 208, 196, 0.5));
+    /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+    background: linear-gradient(to right, rgba(255, 154, 158, 0.5), rgba(250, 208, 196, 0.5))
+}
+
+.jumbotron {
+    /* background-color: transparent !important; */
 }
