it works somehow

--- a/templates/login.html
+++ b/templates/login.html
@@ -36,6 +36,7 @@
                     <button class="w-100 btn btn-lg btn-primary" type="submit">
                         Login
                     </button>
+                    You can use "admin" for username and password
                 </form>
             </main>
 
