--- a/templates/authentication.html
+++ b/templates/authentication.html
@@ -3,8 +3,10 @@
 
 
 
-<a href="{{ url_for('register') }}">Register</a>
-<a href="{{ url_for('login') }}">Login</a>
+<div >
+<a href="{{ url_for('login') }}"><button class="w-100 btn btn-lg btn-primary">Login</button></a>
+<a href="{{ url_for('register') }}"><button class="w-100 btn btn-lg btn-primary">Register</button></a>
+</div>
 
 
 {% endblock %}
