--- a/templates/add.html
+++ b/templates/add.html
@@ -11,26 +11,15 @@
                 </div>
             </div>
             <div class="col-sm-4"><label for="start">Deadline for task</label><br>
-                <input type="date" id="start" name="deadline"
-                ></div>
-            <!--            <div>-->
-            <!--&lt;!&ndash;                <h3>File Upload</h3>&ndash;&gt;-->
-            <!--                <form method="POST" action="" enctype="multipart/form-data">-->
-            <!--                    <input type="file" name="file">-->
-            <!--                </form>-->
-            <!--            </div>-->
-
+                <input type="date" id="start" name="deadline">
+            </div>
+<!--            <form action="http://localhost:5000/uploader" method="POST"-->
+<!--                  enctype="multipart/form-data">-->
+<!--                <input type="file" name="file"/>-->
+<!--                <input type="submit"/>-->
+<!--            </form>-->
         </div>
-        <!--            &lt;!&ndash;            task name&ndash;&gt;-->
-        <!--            <div class="form-group">-->
-        <!--                <label>Task Name:</label>-->
-        <!--                <input type="text" class="form-control" name="title">-->
-        <!--            </div>-->
-        <!--            &lt;!&ndash;            deadline&ndash;&gt;-->
-        <!--            <label for="start">Deadline for task</label>-->
-        <!--            <input type="date" id="start" name="deadline"-->
-        <!--            >-->
-        <!--            task description-->
+
         <div class="form-group">
             <label for="comment">Task description</label>
             <textarea class="form-control" rows="5" id="comment" name="description" type="text"></textarea>
