--- a/templates/edit.html
+++ b/templates/edit.html
@@ -6,7 +6,10 @@
         <!--            task name-->
         <div class="form-group">
             <label>Task Name:</label>
-            <input type="text" class="form-control" name="title" placeholder={{task.title}}>
+
+
+
+            <input type="text" class="form-control" name="title"  value={{task.title}}>
         </div>
         <!--            deadline-->
         <!--            <label for="start">Deadline for task</label>-->
@@ -17,7 +20,7 @@
         <div class="form-group">
             <label for="comment">Task description</label>
             <textarea class="form-control" rows="5" id="comment" name="description" type="text"
-                      placeholder={{task.description}}></textarea>
+                      value={{task.description}}></textarea>
         </div>
         <!--        <input name="description" type="text"><br>-->
         <!--        <button type="">Add file</button>-->
