it works somehow

--- a/static/styles.css
+++ b/static/styles.css
@@ -1,4 +1,4 @@
-.my-bg {
+.my-bg-old {
     background: #ff9a9e;
     /* Chrome 10-25, Safari 5.1-6 */
     background: -webkit-linear-gradient(to right, rgba(255, 154, 158, 0.5), rgba(250, 208, 196, 0.5));
