--- a/templates/authentication.html
+++ b/templates/authentication.html
@@ -2,10 +2,13 @@
 {% block content %}
 
 
-
-<div >
-<a href="{{ url_for('login') }}"><button class="w-100 btn btn-lg btn-primary">Login</button></a>
-<a href="{{ url_for('register') }}"><button class="w-100 btn btn-lg btn-primary">Register</button></a>
+<div>
+    <a href="{{ url_for('login') }}">
+        <button class="w-100 btn btn-lg btn-primary">Login</button>
+    </a>
+    <a href="{{ url_for('register') }}">
+        <button class="w-100 btn btn-lg btn-primary">Register</button>
+    </a>
 </div>
 
 
