--- a/templates/base.html
+++ b/templates/base.html
@@ -8,8 +8,6 @@
     <!-- bootstrap and fontawesome -->
     <link rel="stylesheet"
           href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
-    <!--    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>-->
-    <!--    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>-->
     <script src="https://kit.fontawesome.com/efdaec7388.js"
             crossorigin="anonymous"></script>
     <link rel=icon
@@ -37,12 +35,14 @@
     </div>
 </nav>
 
-<!--search-->
+
 <div class="container ">
     <h1 class="display-3" , style="text-align: center">My tasks</h1>
     <div class="jumbotron my-auto ">
+        <!--obsah jednotlivých stránek-->
         {% block content %}
         {% endblock %}
+
     </div>
 </div>
 
